--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,6 +1,7 @@
 .carousel-prev,
 .carousel-next {
   opacity: 0.1 !important;
+  top: -150px !important;
 }
 .carousel-prev:hover,
 .carousel-next:hover {
@@ -9,7 +10,21 @@
 
 .home__container {
   max-width: 1500px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.home__row {
+  display: flex;
+
+  z-index: 10;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.home__slider {
+  margin-bottom: -300px;
+  z-index: -10;
 }
 .home__image {
   width: 100%;
