--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -35,6 +35,10 @@
   background-color: #cd9042;
 }
 
+.header__searchIcon:hover {
+  background-color: #d3aa41;
+}
+
 .header__optionLineOne {
   font-size: 10px;
 }
@@ -46,10 +50,19 @@
   display: flex;
   align-items: center;
   color: white;
+  margin-right: 5px;
+  padding: 6px 8px;
+  border: 1px solid transparent;
 }
 .header__basketCount {
   margin-left: 10px;
-  margin-right: 10px;
+}
+
+.text-link {
+  text-decoration: none;
+}
+.header__optionBasket:hover {
+  border-color: white;
 }
 
 .header_nav {
@@ -60,7 +73,14 @@
 .header__option {
   display: flex;
   flex-direction: column;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
   color: white;
+  padding: 3px 8px;
+  cursor: pointer;
+  border: 1px solid transparent;
+}
+
+.header__option:hover {
+  border-color: white;
 }
